Updated the favicon of marketmirror

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Use the cropped version of the logo for favicon to ensure proper display -->
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/lovable-uploads/ce9916c4-8dc2-4dcd-9059-ec952244ae2d_cropped.jpeg" />
+    <link rel="icon" type="image/jpeg" sizes="16x16" href="/lovable-uploads/ce9916c4-8dc2-4dcd-9059-ec952244ae2d_cropped.jpeg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/lovable-uploads/ce9916c4-8dc2-4dcd-9059-ec952244ae2d_cropped.jpeg" />
+    
+    <!-- Add favicon styling to ensure proper display -->
+    <style>
+      link[rel="icon"] {
+        display: block;
+        object-fit: contain;
+        background-color: transparent;
+      }
+    </style>
   </head>
 
   <body>
