--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MarketMirror</title>
+    <title>MarketMirror – AI-Powered Stock Research</title>
     <meta name="description" content="A space for financial clarity" />
     <meta name="author" content="MarketMirror" />
 
